<resources>
    <string name="app_name">Gallery Page</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    
    <string name="type_card">Card</string>
    <string name="type_frame">Frame</string>
    <string name="type_grid">Grid</string>
    <string name="type_list">List</string>
    <string name="type_staggered">Staggered</string>
</resources>
